# cookiecutter-python

./: README.md
flask/: cookiecutter.json
flask/{{cookiecutter.project_slug}}/: .dockerignore  .env.example  .pre-commit-config.yml  Dockerfile  Dockerfile-tests  docker-compose.tests.yml  docker-compose.yml  logger.conf  pyproject.toml  requirements-all.txt  requirements-tests.txt  requirements.txt  run_tests_in_docker.sh
flask/{{cookiecutter.project_slug}}/app/: __init__.py
flask/{{cookiecutter.project_slug}}/app/api/v1/hello/: __init__.py  routes.py
flask/{{cookiecutter.project_slug}}/app/api/v1/{{cookiecutter.project_slug}}/: __init__.py  models.py  routes.py
flask/{{cookiecutter.project_slug}}/app/extensions/: health.py
flask/{{cookiecutter.project_slug}}/tests/: conftest.py
flask/{{cookiecutter.project_slug}}/tests/api/v1/: test_{{cookiecutter.project_slug}}.py
flask/{{cookiecutter.project_slug}}/tests/extensions/: test_health.py
package/: cookiecutter.json
package/hooks/: post_gen_project.py
package/{{cookiecutter.package_name}}/: .dockerignore  .flake8  .gitignore  Dockerfile  docker-compose.yml  generate_requirements_file.py  pyproject.toml  run_tests_in_docker.sh
package/{{cookiecutter.package_name}}/tests/: test_{{cookiecutter.package_name}}.py
package/{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/: {{cookiecutter.package_name}}.py
