[project]
name = "{{cookiecutter.project_slug}}"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "flask-pydantic==0.9.0",
    "flask==2.1.1",
    "py-healthcheck==1.10.1",
    "pydantic==1.9.0",

]

[project.optional-dependencies]
tests = [
    "flake8==4.0.1",
    "mypy==0.942",
    "pytest==7.1.1",
    {% if cookiecutter.add_coverage == "y" %}"pytest-cov==3.0.0",{% endif %}
]
dev = [
    "black==22.3.0"
]


[tool.setuptools.dynamic]
version = {attr = "{{cookiecutter.project_slug}}.VERSION"}


[tool.black]
line-length = {{cookiecutter.line_length}}
target-version = ["py310"]
exclude = '''
(
  /(
    | \.git
  )/
)
'''


[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = {{cookiecutter.line_length}}
profile = "black"


[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
show_error_codes = true
plugins = []

[tool.mypy-app.cache]
ignore_errors = false


[tool.pytest.ini_options]
testpaths = "tests/"


{% if cookiecutter.add_coverage == "y" %}
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 95
{% endif %}

